# teamspeak-cli

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
cmake/: version.hpp.in
docs/: architecture.md  cli-output-formatting-plan.md  commands.md  events.md  media-bridge.md  output-format.md  roadmap.md  sdk-integration.md
examples/: ts.example.ini
scripts/: install-release.sh  install.sh  package-release.sh  release.sh  uninstall.sh  write-client-wrapper.sh
src/teamspeak_cli/: main.cpp
src/teamspeak_cli/bridge/: media_bridge.cpp  media_bridge.hpp  media_client.cpp  media_client.hpp  protocol.cpp  protocol.hpp  socket_paths.hpp  socket_server.cpp  socket_server.hpp
src/teamspeak_cli/cli/: command_router.cpp  command_router.hpp  completion.cpp  completion.hpp
src/teamspeak_cli/config/: config_store.cpp  config_store.hpp
src/teamspeak_cli/daemon/: runtime.cpp  runtime.hpp
src/teamspeak_cli/domain/: models.hpp  result.hpp
src/teamspeak_cli/events/: event_queue.cpp  event_queue.hpp
src/teamspeak_cli/output/: render.cpp  render.hpp
src/teamspeak_cli/plugin/: plugin_exports.cpp
src/teamspeak_cli/sdk/: backend.hpp  backend_factory.cpp  backend_factory.hpp  fake_backend.cpp  fake_backend.hpp  mock_backend.cpp  mock_backend.hpp  plugin_host_backend.cpp  plugin_host_backend.hpp  socket_backend.cpp  socket_backend.hpp
src/teamspeak_cli/session/: session_service.cpp  session_service.hpp
src/teamspeak_cli/util/: scope_exit.hpp  strings.cpp  strings.hpp
tests/: built_test_plugin_host_main.cpp  cli_router_test.cpp  config_store_test.cpp  daemon_runtime_test.cpp  event_translation_test.cpp  fake_plugin_host_main.cpp  media_bridge_test.cpp  mock_bridge_host_main.cpp  output_render_test.cpp  plugin_host_backend_test.cpp  session_service_test.cpp  socket_backend_test.cpp  test_support.hpp
tests/e2e/: bootstrap_real_runtime_deps.sh  bootstrap_runtime_deps.sh  client_wrapper_audio_preflight_test.sh  client_wrapper_runtime_library_preflight_test.sh  install_release_stdin_test.sh  real_plugin_runtime_common.sh  run_built_test_cli_smoke.sh  run_built_test_plugin_bridge_e2e.sh  run_fake_cli_smoke.sh  run_mock_bridge_e2e.sh  run_mock_cli_smoke.sh  run_plugin_bridge_e2e.sh  run_plugin_server_e2e.sh  run_plugin_server_env.sh  run_real_plugin_server_e2e.sh  run_real_plugin_server_env.sh  runtime_common.sh  runtime_dependency_map_test.sh  stop_plugin_server_env.sh  stop_real_plugin_server_env.sh
tests/fixtures/: sample-config.ini
